2015-11-13 Roman
- FIX:SYS: Wrong translation fix to Russian for the message "%s for type '%s' doesn't support module version: %d!"
- Protocol.UserProtocol: Translation to the new messages appended.
- FIX:UI.WebVision: Protocol's table fixed for clean before a structure changing.


2015-11-13 fido_max
- DAQ.Fastwel: DIM765/766 added. Init refactored.
- DAQ.FT3: AddrReq/ReqData processing combined. Using PLC timestamp.   


2015-11-12 Roman
- SYS,Archive.FSArch,DB.DBF,DAQ.{Comedi,SMH2Gi}:
    readdir_r() using rewrote to "dirent" structure direct malloc and prevent problems on other OS, like QNX.
- !!!!:SYS:
    Core library version rose to 3:4:0.
    DB subsystem type modules version rose to 8.
    DAQ subsystem type modules version rose to 9.
    Archive subsystem type modules version rose to 8.
    Protocol subsystem type modules version rose to 7.
    Special subsystem type modules version rose to 7.
    Transports subsystem type modules version rose to 8.
    UI subsystem type modules version rose to 7.
    TFunction: Mostly the source code cleaned and run_st renamed ro runSt.
- !!!:Protocol.{*,UserProtocol},Transport.{Sockets,SSL}: Function Protocol::waitReqTm() added for pool mode control of input protocols.
    Protocol.UserProtocol and Transport.{Sockets,SSL} adapted to pool mode of input transport-protocol support.


2015-11-11 Roman
- SYS: Synonym "pid-file" to "pidfile" command-line argument is added.
- !!!!:SYS.TElem: Item's resource mResEl moved from Res to pthread_mutex_t. Mostly the source code cleaned.
- !!!!:SYS.TModule: The info attributes like m{Name} renamed to mMod{Name}. Mostly the source code cleaned.
    Function modInfoMainSet() added and used into all modules for main info attributes of a module set.
- !!!:DAQ.{LogicLev,ModBus}: Appended by user API functions to the parameter object attrAdd() and attrDel() for attributes free management.
- FIX:DAQ.OPC_UA: Product URI changed to "urn:OpenSCADA:DAQ.OPC_UA".