@@ -37,73 +37,73 @@ using namespace OSCADA;
 //*************************************************
 TVariant::TVariant( ) : mType(Null), mModify(false), mFixedTp(false)
 {
-    if(mess_lev() == TMess::Debug) SYS->cntrIter(objName(), 1);
+    //if(mess_lev() == TMess::Debug) SYS->cntrIter(objName(), 1);
 }
 
 TVariant::TVariant( bool ivl ) : mType(Null), mModify(false), mFixedTp(false)
 {
     setB(ivl);
-    if(mess_lev() == TMess::Debug) SYS->cntrIter(objName(), 1);
+    //if(mess_lev() == TMess::Debug) SYS->cntrIter(objName(), 1);
 }
 
 TVariant::TVariant( char ivl ) : mType(Null), mModify(false), mFixedTp(false)
 {
     setB(ivl);
-    if(mess_lev() == TMess::Debug) SYS->cntrIter(objName(), 1);
+    //if(mess_lev() == TMess::Debug) SYS->cntrIter(objName(), 1);
 }
 
 TVariant::TVariant( int ivl ) : mType(Null), mModify(false), mFixedTp(false)
 {
     setI(ivl);
-    if(mess_lev() == TMess::Debug) SYS->cntrIter(objName(), 1);
+    //if(mess_lev() == TMess::Debug) SYS->cntrIter(objName(), 1);
 }
 
 TVariant::TVariant( int64_t ivl ) : mType(Null), mModify(false), mFixedTp(false)
 {
     setI(ivl);
-    if(mess_lev() == TMess::Debug) SYS->cntrIter(objName(), 1);
+    //if(mess_lev() == TMess::Debug) SYS->cntrIter(objName(), 1);
 }
 
 TVariant::TVariant( double ivl ) : mType(Null), mModify(false), mFixedTp(false)
 {
     setR(ivl);
-    if(mess_lev() == TMess::Debug) SYS->cntrIter(objName(), 1);
+    //if(mess_lev() == TMess::Debug) SYS->cntrIter(objName(), 1);
 }
 
 TVariant::TVariant( const string &ivl ) : mType(Null), mModify(false), mFixedTp(false)
 {
     setS(ivl);
-    if(mess_lev() == TMess::Debug) SYS->cntrIter(objName(), 1);
+    //if(mess_lev() == TMess::Debug) SYS->cntrIter(objName(), 1);
 }
 
 TVariant::TVariant( const char *ivl ) : mType(Null), mModify(false), mFixedTp(false)
 {
     setS(ivl);
-    if(mess_lev() == TMess::Debug) SYS->cntrIter(objName(), 1);
+    //if(mess_lev() == TMess::Debug) SYS->cntrIter(objName(), 1);
 }
 
 TVariant::TVariant( AutoHD<TVarObj> ivl ) : mType(Null), mModify(false), mFixedTp(false)
 {
     setO(ivl);
-    if(mess_lev() == TMess::Debug) SYS->cntrIter(objName(), 1);
+    //if(mess_lev() == TMess::Debug) SYS->cntrIter(objName(), 1);
 }
 
 TVariant::TVariant( TVarObj *ivl ) : mType(Null), mModify(false), mFixedTp(false)
 {
     setO(AutoHD<TVarObj>(ivl));
-    if(mess_lev() == TMess::Debug) SYS->cntrIter(objName(), 1);
+    //if(mess_lev() == TMess::Debug) SYS->cntrIter(objName(), 1);
 }
 
 TVariant::TVariant( const TVariant &var ) : mType(Null), mModify(false), mFixedTp(false)
 {
     operator=(var);
-    if(mess_lev() == TMess::Debug) SYS->cntrIter(objName(), 1);
+    //if(mess_lev() == TMess::Debug) SYS->cntrIter(objName(), 1);
 }
 
 TVariant::~TVariant( )
 {
     setType(Null);
-    if(mess_lev() == TMess::Debug) SYS->cntrIter(objName(), -1);
+    //if(mess_lev() == TMess::Debug) SYS->cntrIter(objName(), -1);
 }
 
 void TVariant::setType( Type tp, bool fix )
